
This changelog file only registers (part of) changes to the server programs.

Author abbreviations:
BPR	= Bernadette Perrin-Riou
ER	= Eric Rayssat
FG	= Fabrice Guerimand
GK	= Georges Khaznadar
GX	= Gang Xiao (default author)
JE	= Joke Evers
JY	= Joachim Yameogo
MC	= Marina Cazzola
RM	= Regine Mangeard

2007-12-08: add to votes (french version) "traced vote" ; add csv upload of votes results. 
        [r217] (BPR)
2007-12-03: give to sc_reply the same status as remply. Can be used in test conditions.
        [r213] (BPR)
2007-12-03: Add option "noreaccent" in answer type case [r209] (BPR)
2007-11-28: Fixed bug in votes [r203] (BPR)
2007-11-25: Fixed bug: login with point was accepted but data was erased 
        by csv upload [r202] (BPR)
2007-11-23: Bug fixed : presentation sheet with doc page (all lang) (FG)
2007-11-21: Add an option parameter for answer : noanalyzeprint : in this case, no 
        preformatted analyzed answer is printed (only the score). (BPR)  
2007-11-20: Some oef help translations in script/help in separate directories (for the moment, 
        fr, es, cn) (BPR)
2007-09-27: Fixed in adm/class/userlist.fr/cvs : email variable was removed when
        uploading cvs, empty variables for participants were replaced by preceeding 
        participants when downloading cvs. Added possibility to download or upload 
        technical variables. (BPR)
For the moment, only in french version. (BPR)
2007-09-25: patch on the cn version (from Zhijie Chen, transmitted by GX)
2007-09-16: fixed the anstype scripts for chemeq, units,
            sigunits. Now they allow to see the good replies in debug
            mode with Createxo, and the correct answer is shown when a bad
            reply has been fed in. (GK) 
2007-09-16 Add chemistry slib (GK)
2007-08-28 Correction for option keeporder : solution was in first position in type clickfill for option 
         keeporder (BPR)
2007-08-27 Add votes in class download (class/config) (BPR)