@@ -130,6 +130,14 @@ This is the limit of disk space usage for each virtual class on the server.
 If a virtual class' disk space use reaches or exceeds this number in Megabytes,
 the supervisor's homepage will get locked.
 
+:class superclass_quota wims_superclass_quota
+Disk quota for portal in Meg
+int
+1,2000
+This is the limit of disk space usage for each portal on the server.
+If a portal disk space use reaches or exceeds this number in Megabytes,
+the supervisor's homepage will get locked.
+
 :class class_user_limit wims_class_user_limit
 Limit of participants in each class
 int
