@@ -12,6 +12,7 @@ JY	= Joachim Yameogo
 MC	= Marina Cazzola
 RM	= Regine Mangeard
 
+2007-12-14: superclass_quota replace class_quota for portal structure (FG)
 2007-12-08: add to votes (french version) "traced vote" ; add csv upload of votes results. 
         [r217] (BPR)
 2007-12-03: give to sc_reply the same status as remply. Can be used in test conditions.
